Add papers page and link to Godoy's paper

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ navbar-links:
   Agenda: "agenda"
   Call for Papers: "call"
   Committees: "committee"
+  Position Papers: "papers"
 
 # --- Background colour/image options --- #
 
